<?xml version="1.0"?>
<package format="2">
  <name>haptic_control</name>
  <version>0.0.0</version>
  <description>Package to enable the Phantom Omni to control a ur5 robotic arm, while enabling force feedback from the robot to be conveyed via the Omni</description>

  <maintainer email="nhcha6@student.monash.edu">nicolas</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
